# framework.web.webapi-plugins

./: .brackets.json  .gitignore  .jshintignore  .jshintrc  CMakeLists.txt  LICENSE.bsd
packaging/: webapi-plugins.spec
src/: CMakeLists.txt
src/alarm/: CMakeLists.txt  alarm-plugin.cpp
src/alarm/js/: tizen.alarm.plugin
src/application/: CMakeLists.txt  application-manager.cpp  application-manager.h  application-plugin.cpp  application-utils.cpp  application-utils.h  application.cpp  application.h  requested-application-control.cpp  requested-application-control.h
src/application/js/: tizen.application.plugin
src/common/: CMakeLists.txt  converter.cpp  converter.h  current-application.cpp  current-application.h  dbus-operation.cpp  dbus-operation.h  function-dispatcher.cpp  function-dispatcher.h  json-parser.cpp  json-parser.h  logger.h  native-plugin.cpp  native-plugin.h  platform-exception.cpp  platform-exception.h  task-queue.cpp  task-queue.h
src/common/js/: tizen.Common.js  tizen.plugin  webapis.plugin
src/filesystem/: CMakeLists.txt  filesystem-plugin.cpp  filesystem-utils.cpp  filesystem-utils.h
src/filesystem/js/: tizen.filesystem.Common.js  tizen.filesystem.DLog.js  tizen.filesystem.Encoding.js  tizen.filesystem.File.js  tizen.filesystem.FileStream.js  tizen.filesystem.FileSystemManager.js  tizen.filesystem.Mode.js  tizen.filesystem.PlatformMode.js  tizen.filesystem.plugin
src/messageport/: CMakeLists.txt  bundle-util.cpp  bundle-util.h  message-port-plugin.cpp
src/messageport/js/: tizen.messageport.plugin
src/package/: CMakeLists.txt  package-plugin.cpp
src/package/js/: tizen.package.plugin
src/power/: CMakeLists.txt  power-plugin.cpp
src/power/js/: tizen.power.plugin
src/systeminfo/: CMakeLists.txt  systeminfo-plugin.cpp  systeminfo-utils.cpp  systeminfo-utils.h
src/systeminfo/js/: tizen.systeminfo.plugin
src/timeutil/: CMakeLists.txt  timeutil-plugin.cpp  timeutil-tools.cpp  timeutil-tools.h
src/timeutil/js/: tizen.timeutil.plugin
src/utils/: utils_api.js
test/: index.js
test/common/: loader.js
test/tct/: tct.js
test/tct/common/: testharness.js  unitcommon.js
test/tct/tests/: TestAlarm.js  TestApplication.js  TestContent.js  TestFilesystem.js  TestHumanActivityMonitor.js  TestMessagePort.js  TestPackage.js  TestPower.js  TestSystemSetting.js  TestSysteminfo.js  TestTime.js
test/utc/: README  changeClockSettingFile.sh  utc.js
test/utc/common/: TestEngine.js
test/utc/config/: ConfigAlarm.js  ConfigApplication.js  ConfigClock.js  ConfigContent.js  ConfigFilesystem.js  ConfigHumanActivityMonitor.js  ConfigMessagePort.js  ConfigPackage.js  ConfigPower.js  ConfigSystemSetting.js  ConfigSysteminfo.js
test/utc/tests/: ClockSettingCIS.js  ClockSettingCommon.js  ClockSettingDCM.js  ClockSettingORA.js  TestAlarm.js  TestApplication.js  TestClock.js  TestContent.js  TestFilesystem.js  TestHumanActivityMonitor.js  TestMessagePort.js  TestPackage.js  TestPower.js  TestSystemSetting.js  TestSysteminfo.js
tools/: .tools.conf.example  common.sh  deploy-to-device.sh  remove-fake-app.sh  run-test.sh  tct_test_extractor.sh
